# winzy-notify

./: README.md  pyproject.toml
tests/: test_winzy_notify.py
winzy_notify/: __init__.py
